--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-    "name": "poiesis",
-    "version": "1.0.0",
-    "scripts": {
-        "client-build": "cd client && npm run build && cd ..",
-        "client-run": "cd client && npm run start",
-        "dev": "concurrently \"npm run client-run\" \"node start\"",
-        "now-dev": "cd client && npm run start",
-        "start": "npm run client-build && node server",
-        "watch": "nodemon ./start.js --ignore public/",
-        "deploy": "now --target production && now rm poiesis --safe --yes"
+    "name": "poiesis-client",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "react-scripts": "3.0.0"
     },
     "dependencies": {
-        "body-parser": "^1.18.3",
-        "csv": "^5.1.1",
-        "csv-parser": "^2.2.0",
-        "directory-tree": "^2.2.2",
-        "dotenv": "^4.0.0",
-        "express": "^4.16.4",
-        "html-entities": "^1.2.1",
-        "remove-accents": "^0.4.2",
-        "rita": "^1.3.94"
+        "awesome-debounce-promise": "^2.1.0",
+        "axios": "^0.18.0",
+        "file-saver": "^2.0.1",
+        "lodash.throttle": "^4.1.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.0",
+        "react-keyboard-shortcuts": "^1.1.3",
+        "react-redux": "^7.0.3",
+        "redux": "^4.0.1",
+        "redux-localstorage-simple": "^2.1.6",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^4.2.0"
     },
-    "devDependencies": {
-        "concurrently": "^3.6.1",
-        "nodemon": "^1.18.4"
+    "scripts": {
+        "start": "PORT=3006 react-scripts start",
+        "build": "react-scripts build",
+        "now-build": "react-scripts build",
+        "now-dev": "react-scripts start",
+        "dev": "react-scripts start",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
