--- a/package.json
+++ b/package.json
@@ -3,29 +3,28 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "react-scripts": "3.0.0"
+        "react-scripts": "^4.0.0"
     },
     "dependencies": {
         "awesome-debounce-promise": "^2.1.0",
         "axios": "^0.18.0",
+        "csv-parser": "^2.3.3",
         "file-saver": "^2.0.1",
+        "html-entities": "^1.3.1",
         "lodash.throttle": "^4.1.1",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-helmet": "^5.2.0",
         "react-keyboard-shortcuts": "^1.1.3",
-        "react-redux": "^7.0.3",
-        "redux": "^4.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
         "redux-localstorage-simple": "^2.1.6",
         "redux-thunk": "^2.3.0",
         "styled-components": "^4.2.0"
     },
     "scripts": {
-        "start": "PORT=3006 react-scripts start",
         "build": "react-scripts build",
-        "now-build": "react-scripts build",
-        "now-dev": "react-scripts start",
-        "dev": "react-scripts start",
+        "start": "react-scripts start",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
